Create aontainer and its dependecy entities

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/typescript/bin/tsc"
+    "build": "./node_modules/typescript/bin/tsc",
+    "start": "node ./build/index.js"
   },
   "author": "",
   "license": "ISC",
