--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
       "noImplicitAny": true,
       "noImplicitReturns": true,
       "noUnusedLocals": true,
-      "noUnusedParameters": true
+      "noUnusedParameters": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
     },
 }
