--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "outDir": "build",
       "moduleResolution": "node",
       "allowSyntheticDefaultImports": true,
+      "strictNullChecks": true,
       "noImplicitAny": true,
       "noImplicitReturns": true,
       "noUnusedLocals": true,
