--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "ES2016",
-    "sourceMap": false,
-    "module": "commonjs",
+    "target": "ES2015",
+    "module": "ES2015",
+    "lib": ["es6", "dom"],
+    "types": ["reflect-metadata"],
+    "sourceMap": true,
+    "declaration": true,
+    "allowJs": false,
     "esModuleInterop": true,
     "outDir": "build",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "removeComments": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
