Add some metadata to package.json and create .npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,13 @@
-src
-__tests__
-typings
-bundled
-build
-temp
-coverage
-docs
-tsconfig.json
-typings.json
-eslint.json
-wallaby.js
-.travis.yml
+dist/
+src/
+temp/
+coverage/
+docs/
+node_module/
+__tests__/
+.babelrc
+.storybook
 .gitignore
-.vscode
+.prettierrc
+rollup.config.js
+tsconfig.json
