Add scope to package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ioc-ts",
+  "name": "@ceoro9/ioc-ts",
   "version": "1.0.0",
   "description": "Inversion of control container on TypeScript",
   "main": "build/index.js",
