--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ceoro9/ioc-ts",
-  "version": "1.0.3",
+  "version": "0.0.0-development",
   "description": "Inversion of control container on TypeScript",
   "main": "build/index.js",
   "module": "build/index.es.js",
@@ -10,11 +10,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ceoro9/ioc-ts.git"
+    "url": "https://github.com/ceoro9/ioc-ts.git"
   },
   "scripts": {
-    "build": "rollup --config && tsc",
+    "compile": "tsc",
+    "build": "rollup --config && npm run compile",
     "start": "rollup -c -w",
+    "release": "semantic-release",
     "clean": "rm -rf build/",
     "lint": "eslint --ext ts,js,json .",
     "lint:fix": "npm run lint -- --fix",
@@ -54,6 +56,8 @@
     "rollup": "^2.0.6",
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.26.0",
+    "semantic-release": "^17.0.4",
+    "semantic-release-cli": "^5.2.3",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   }
