--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "build",
-    "examples",
-    "rollup.config.js",
-    "tests",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["node_modules", "build", "examples", "rollup.config.js", "tests", "**/*.test.ts", "**/*.spec.ts"]
 }
