--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "coveralls": "^3.0.11",
@@ -57,12 +57,13 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
-    "rollup": "^2.0.6",
+    "rollup": "^2.1.0",
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.26.0",
     "semantic-release": "^17.0.4",
     "semantic-release-cli": "^5.2.3",
     "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "underscore.string": ">=3.3.5"
   }
 }
