--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "compile": "tsc",
     "build": "rollup --config && npm run compile",
+    "preinstall": "npm-force-resolutions",
     "start": "rollup -c -w",
     "release": "semantic-release",
     "clean": "rm -rf build/ coverage/ src/**/*.map",
@@ -55,6 +56,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
+    "npm-force-resolutions": "0.0.3",
     "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.1.0",
