chore(dep): update dependency minimist to 1.2.5 and underscore.string to 3.3.5

--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3",
     "underscore.string": ">=3.3.5"
+  },
+  "resolutions": {
+    "underscore.string": ">=3.3.5",
+    "minimist": ">=1.2.2"
   }
 }
