--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ceoro9/ioc-ts",
-  "version": "0.0.0-development",
+  "version": "1.0.6",
   "description": "Inversion of control container on TypeScript",
   "main": "build/index.js",
   "module": "build/index.es.js",
